--- a/test/internal/config/field_test.yml
+++ b/test/internal/config/field_test.yml
@@ -1,42 +1,43 @@
-experiments:
-  button_color:
-    variants:
-      - red
-      - green
-      - blue
-  button_color2:
-    variants:
-      - red
-      - green
-  landing_page:
-    variants:
-      - page_a
-      - page_b
-      - page_c
-    winner: page_c
-  landing_page2:
-    variants:
-      - page_a
-      - page_b
-      - page_c
-    winner: page_c
-    keep_variant: true
-  landing_page3:
-    variants:
-      - page_a
-      - page_b
-      - page_c
-    closed: true
-  landing_page4:
-    variants:
-      - page_a
-      - page_b
-      - page_c
-    goals:
-      - signed_up
-      - ordered
-exclude:
-  bots: true
-  ips:
-    - 123.4.5.6
-    - 123.1.2.0/24
+test:
+  experiments:
+    button_color:
+      variants:
+        - red
+        - green
+        - blue
+    button_color2:
+      variants:
+        - red
+        - green
+    landing_page:
+      variants:
+        - page_a
+        - page_b
+        - page_c
+      winner: page_c
+    landing_page2:
+      variants:
+        - page_a
+        - page_b
+        - page_c
+      winner: page_c
+      keep_variant: true
+    landing_page3:
+      variants:
+        - page_a
+        - page_b
+        - page_c
+      closed: true
+    landing_page4:
+      variants:
+        - page_a
+        - page_b
+        - page_c
+      goals:
+        - signed_up
+        - ordered
+  exclude:
+    bots: true
+    ips:
+      - 123.4.5.6
+      - 123.1.2.0/24
